fix jumping button on click

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1752,15 +1752,6 @@ a.btn:hover {
 			color: #fff !important;
 		}
 
-		input[type="button"]:active,
-		input[type="submit"]:active,
-		input[type="reset"]:active,
-		button:active,
-		.button:active {
-			background-color: #3BA8D3;
-			top: 1px;
-		}
-
 		input[type="button"].large,
 		input[type="submit"].large,
 		input[type="reset"].large,
